Cell items are now in a pool
GC should not spend that much time now in the middle of a simulation